wordpress/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
spec:
  type: ClusterIP
  selector:
    app: wordpress
  ports:
  - port: 80
    targetPort: 80
